# tauri-rust

./: .gitignore  next.config.mjs  package-lock.json  package.json  tsconfig.json
src/: middleware.ts
src-taurin/: .env  Cargo.toml  tauri.conf.json
src-taurin/.tauri-seaorm-template/data/: db.sqlite
src-taurin/entity/: Cargo.toml
src-taurin/entity/src/: community.rs  lib.rs  thread.rs  thread_community.rs  user.rs  user_community.rs
src-taurin/migration/: Cargo.toml
src-taurin/migration/src/: lib.rs  m20240221_193040_create_thread_table.rs  m20240221_203006_create_community_table.rs  m20240221_203522_create_user_table.rs  m20240221_204447_create_thread_community_table.rs  m20240223_163000_create_user_community_table.rs
src-taurin/service/: Cargo.toml
src-taurin/service/src/: lib.rs
src-taurin/service/src/mutation/: community.rs  mod.rs  thread.rs  user.rs
src-taurin/service/src/query/: mod.rs  thread.rs  user.rs
src-taurin/service/tests/: mock.rs  prepare.rs
src-taurin/src/: main.rs
src/app/(auth)/: layout.tsx
src/app/(auth)/onboarding/: page.tsx
src/app/(root)/: layout.tsx  page.tsx
src/app/api/webhook/clerk/: router.ts
src/components/shared/: BottomBar.tsx  RightBar.tsx  TopBar.tsx
