[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }


[dependencies.sea-orm]
version = "0.12.4"
features = [
  "debug-print",
  "runtime-tokio-native-tls",
  "sqlx-sqlite",
]

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt"] }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
